# magnolia

./: .gitignore  README.md  pyproject.toml
data/project_examples/project01/: .oberon.json  oberon.json
data/project_examples/project02/: main.oberon  main.test  oberon.json
docs/: core_guidelines.md  development_guideline.md  environment_setup.md
src/: main.py
src/cmd_arguments/: cmd_arguments.py
src/cmd_arguments/tests/: cmd_arguments_test.py
src/environment/: environment.py
src/environment/tests/: environment_test.py
src/installer/: installer.py
src/installer/tests/: installer_test.py
src/logger/: colors.py  logger.py
src/project/: project.py
src/project/test_project/: test_project.py
src/runner/: runner.py
src/runner/test_runner/: test_runner.py
src/tester/: tester.py
tools/: README.md  build.py  format_check.py
