[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magnolia"
version = "0.0.1"
dependencies = [
  "black",
  "pylint",
  "colorama",
  "pyinstaller",
  "requests"
]
requires-python = ">=3.8"
authors = [
  {name = "Ualiton Ventura", email = "ualivent@gmail.com"},
]
maintainers = [
  {name = "Ualiton Ventura", email = "ualivent@gmail.com"}
]
description = "Package Manager for Oberon-Scala Implementation."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["package", "manager"]
